import export file

--- a/config/settings.yml
+++ b/config/settings.yml
@@ -14,6 +14,14 @@ products:
   max_stars: 5
   round: 2
   name_length: 50
+  tmp_type: 1
+  default:
+    id: 1
+    name: "Adidas"
+    info: "From New York"
+    quantity: 10
+    price: 20
+    category_id: 1
 cart:
   per_page: 3
   size_img: "50x50"
