--- a/config/settings.yml
+++ b/config/settings.yml
@@ -15,6 +15,8 @@ products:
   round: 2
   name_length: 50
   tmp_type: 1
+  review_page: 10
+  quantity_min: 1
   default:
     id: 1
     name: "Adidas"
